Fix: Dark mode background color for select controls in the Editor

--- a/assets/dev/scss/editor/_forms.scss
+++ b/assets/dev/scss/editor/_forms.scss
@@ -11,6 +11,7 @@ textarea,
 	font-size: 12px;
 	width: 100%;
 	background: none;
+	background-color: var(--e-a-bg-default);
 	box-shadow: none;
 	border: var(--e-a-border-bold);
 	outline: none;
